--- a/composer.json
+++ b/composer.json
@@ -8,14 +8,14 @@
             "email": "vengador32@gmail.com"
         }
     ],
-    "bin": ["bin/brain-games"],
+    "bin": ["bin/brain-games", "bin/brain-even"],
     "minimum-stability": "dev",
     "license": "MIT",
     "require": {
         "wp-cli/php-cli-tools": "dev-master"
     },
     "autoload": {
-        "files": ["src/Cli.php"]
+        "files": ["src/Cli.php", "src/Game.php"]
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.0@dev"
