--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "bin": ["bin/brain-games", "bin/brain-even"],
     "license": "MIT",
     "require": {
-        "wp-cli/php-cli-tools": "dev-master"
+        "wp-cli/php-cli-tools": ">=0.11.11",
+        "php": ">=5.4.0"
     },
     "autoload": {
         "files": ["src/Cli.php", "src/Game.php"]
