--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "tazya/hexlet-project-lvl1",
+    "name": "tazya/brain-games",
     "description": "This is Brain Games for a command line",
     "type": "project",
     "authors": [
