--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,12 @@
             "email": "vengador32@gmail.com"
         }
     ],
-    "bin": ["bin/brain-even", "bin/brain-calc", "bin/brain-gcd"],
+    "bin": [
+        "bin/brain-even",
+        "bin/brain-calc",
+        "bin/brain-gcd",
+        "bin/brain-progression"
+    ],
     "license": "MIT",
     "require": {
         "wp-cli/php-cli-tools": "^0.11.11",
@@ -19,7 +24,8 @@
             "src/Cli.php",
             "src/games/EvenGame.php",
             "src/games/CalcGame.php",
-            "src/games/GcdGame.php"
+            "src/games/GcdGame.php",
+            "src/games/ProgressionGame.php"
         ]
     },
     "require-dev": {
